--- a/client/src/layout/AdminLayout/index.module.scss
+++ b/client/src/layout/AdminLayout/index.module.scss
@@ -10,3 +10,18 @@
     width: 32px;
   }
 }
+
+.info {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  color: #000;
+}
+
+.github {
+  font-size: 24px;
+  display: inline-block;
+  display: flex;
+  align-items: center;
+  margin-right: 12px;
+}
