--- a/client/src/layout/AdminLayout/index.module.scss
+++ b/client/src/layout/AdminLayout/index.module.scss
@@ -1,3 +1,14 @@
+.wrapper {
+  flex-direction: row;
+}
+
+.sider {
+  position: fixed;
+  left: 0;
+  height: 100vh;
+  overflow: auto;
+}
+
 .logo {
   height: 32px;
   background: rgba(255, 255, 255, 0.2);
@@ -5,6 +16,9 @@
   text-align: center;
   color: #fff;
   line-height: 32px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 
   img {
     width: 32px;
