feat(client): update markdown.scss

--- a/client/src/theme/markdown.scss
+++ b/client/src/theme/markdown.scss
@@ -57,6 +57,7 @@
       font-size: 14px;
       border-left: 4px solid #ff0064;
       padding: 12px 24px 12px 12px;
+      margin-top: 1em;
       border-left-width: 4px;
       border-left-style: solid;
       background-color: #f8f8f8;
