--- a/client/src/theme/reset.scss
+++ b/client/src/theme/reset.scss
@@ -33,6 +33,10 @@ a {
   }
 }
 
+html {
+  text-size-adjust: 100% !important;
+}
+
 body {
   font-family: "Nunito", "Helvetica", Arial, sans-serif;
   color: #5f5f6f;
