--- a/client/src/components/ArticleList/index.module.scss
+++ b/client/src/components/ArticleList/index.module.scss
@@ -1,6 +1,8 @@
 @import "../../theme/var.scss";
 
 .articleListItem {
+  padding: 16px;
+
   > div {
     width: 100%;
     height: 100%;
@@ -9,10 +11,22 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05), 0 0 1px rgba(0, 0, 0, 0.1);
   }
 
-  img {
-    display: inline-block;
+  &:hover {
+    img {
+      transform: scale(1.2);
+    }
+  }
+
+  .imgWrapper {
     width: 100%;
     height: 180px;
+    overflow: hidden;
+
+    img {
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .info {
