--- a/client/src/components/Comment/index.module.scss
+++ b/client/src/components/Comment/index.module.scss
@@ -2,6 +2,11 @@
   padding: 16px;
   background-color: #fff;
 
+  &.isChildren {
+    border: 1px solid rgba(217, 217, 217, 0.5);
+    border-radius: 4px;
+  }
+
   input,
   textarea {
     display: block;
@@ -82,17 +87,17 @@
 .commentContent {
   position: relative;
 
-  &.addLine {
-    &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 30px;
-      pointer-events: none;
-      border-bottom: 1px solid rgba(217, 217, 217, 0.5);
-    }
-  }
+  // &.addLine {
+  //   &::after {
+  //     content: "";
+  //     position: absolute;
+  //     left: 0;
+  //     width: 100%;
+  //     height: 30px;
+  //     pointer-events: none;
+  //     border-bottom: 1px solid rgba(217, 217, 217, 0.5);
+  //   }
+  // }
 
   :global {
     .markdown {
