--- a/client/src/components/Footer/index.module.scss
+++ b/client/src/components/Footer/index.module.scss
@@ -1,46 +1,31 @@
-@media (min-width: 768px) {
-  .info {
-    width: 768px;
-  }
-}
-
-@media (min-width: 992px) {
-  .info {
-    width: 970px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .info {
-    width: 1140px;
-  }
-}
-
 footer {
-  border-top: 1px solid #eee;
-  color: #888;
-  line-height: 1.6;
-  vertical-align: top;
-  background: #404040;
+  background: #292525;
+  padding: 20px 0;
   text-align: center;
+  border-top: 1px solid #eee;
+  color: #fff;
 }
 
-.info {
-  padding: 35px 0;
-  color: #e5e5e5;
-  margin: 0 auto;
+ul.icons {
+  display: inline-flex;
+  flex-wrap: nowrap;
+  margin: 8px 0 16px;
+
+  li {
+    font-size: 24px;
+    text-align: center;
+    display: inline-block;
+    border-radius: 50%;
+    margin: 0 5px;
+
+    &:first-of-type {
+      margin-top: 1px;
+    }
+  }
 }
 
 .copyright {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  background: #111111;
-  text-align: center;
-  color: #ffffff;
-  padding-top: 28px;
-  padding-bottom: 5px;
-  border-top: 1px solid #303030;
-  font-size: 16px;
+  color: #c1bdbd;
+  font-size: 10px;
+  line-height: 15px;
 }
