--- a/client/pages/admin/register/index.module.scss
+++ b/client/pages/admin/register/index.module.scss
@@ -12,17 +12,16 @@
 
   .container {
     width: 520px;
-    margin-top: 30vh;
+    margin-top: 20vh;
 
     h2 {
-      color: #fff;
       font-size: 26px;
       color: #eee;
-      text-align: center;
       margin-bottom: 40px;
     }
 
     span,
+    label,
     a {
       color: #fff;
     }
