--- a/client/pages/article/index.module.scss
+++ b/client/pages/article/index.module.scss
@@ -36,34 +36,37 @@
     margin: 0 auto;
     padding: 0 16px;
 
-    .tags {
+    .articleFooter {
+      display: flex;
+      justify-content: space-between;
       margin-top: 30px;
       border-top: 1px solid #ebebeb;
       padding: 21px 0 0;
-
-      color: #959595;
-      font-style: italic;
+      color: #b3b3b3;
       line-height: 28px;
 
-      .tag {
-        display: inline-flex;
-        align-items: center;
-        margin: 0 1.25rem 1rem 0;
-        padding: 0.167rem;
-        background-color: #fff;
-        border-radius: 2px;
-        font-size: 14px;
-
-        img {
-          width: 1.75rem;
-          height: 1.75rem;
+      .tags {
+        .tag {
+          display: inline-flex;
+          align-items: center;
+          margin: 0 1.25rem 1rem 0;
+          padding: 0.167rem;
+          background-color: #fff;
           border-radius: 2px;
-        }
+          font-size: 14px;
+          text-decoration: underline;
 
-        span {
-          padding: 0 0.75rem;
-          line-height: 1.75rem;
-          color: #919191;
+          img {
+            width: 1.75rem;
+            height: 1.75rem;
+            border-radius: 2px;
+          }
+
+          span {
+            padding: 0 0.75rem;
+            line-height: 1.75rem;
+            color: #919191;
+          }
         }
       }
     }
