--- a/client/pages/article/index.module.scss
+++ b/client/pages/article/index.module.scss
@@ -41,7 +41,7 @@
       justify-content: space-between;
       margin-top: 30px;
       border-top: 1px solid #ebebeb;
-      padding: 21px 0 0;
+      padding: 21px 0;
       color: #b3b3b3;
       line-height: 28px;
 
@@ -49,8 +49,6 @@
         .tag {
           display: inline-flex;
           align-items: center;
-          margin: 0 1.25rem 1rem 0;
-          padding: 0.167rem;
           background-color: #fff;
           border-radius: 2px;
           font-size: 14px;
@@ -100,6 +98,12 @@
   }
 
   @media (max-width: 768px) {
+    .content {
+      padding: 0;
+    }
+  }
+
+  @media (max-width: 1196px) {
     .anchorWidget,
     .widget {
       display: none;
