--- a/client/pages/page/index.module.scss
+++ b/client/pages/page/index.module.scss
@@ -16,4 +16,12 @@
 .content {
   max-width: 800px;
   margin: 0 auto;
+  padding: 0 8px 21px;
+}
+
+@media (max-width: 768px) {
+  .content {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
