--- a/client/src/components/CommentAndRecommendArticles/index.module.scss
+++ b/client/src/components/CommentAndRecommendArticles/index.module.scss
@@ -39,4 +39,14 @@
     margin-bottom: 30px;
     text-align: center;
   }
+
+  .articleContainer {
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  }
+
+  @media (max-width: 768px) {
+    .articleContainer {
+      box-shadow: none;
+    }
+  }
 }
