--- a/client/src/theme/reset.scss
+++ b/client/src/theme/reset.scss
@@ -103,6 +103,10 @@ body {
     + .ant-comment {
       margin-top: 8px;
     }
+
+    .ant-comment-inner {
+      border-bottom: 1px solid #f6f6f6;
+    }
   }
 
   .ant-anchor-wrapper {
