--- a/client/src/components/Comment/index.module.scss
+++ b/client/src/components/Comment/index.module.scss
@@ -1,32 +1,24 @@
 .editor {
-  padding: 16px;
+  padding: 16px 0;
   background-color: #fff;
+  border-top: 1px solid #e1e4e8;
+  position: relative;
+  margin-left: 48px;
 
-  &.isChildren {
-    border: 1px solid rgba(217, 217, 217, 0.5);
-    border-radius: 4px;
+  .avatar {
+    position: absolute;
+    left: -48px;
+    top: 21px;
   }
 
-  input,
-  textarea {
-    display: block;
-    width: 100%;
-    outline: none;
-    border: none;
-    border-bottom: 1px dashed #ddd;
-    border-radius: 0;
-    box-shadow: none !important;
-    padding-left: 0;
-  }
+  .nameAndMail {
+    display: flex;
 
-  input {
-    + input {
-      margin-top: 8px;
+    justify-content: space-between;
+
+    input {
+      width: 49%;
     }
-  }
-
-  textarea {
-    margin-top: 1rem;
   }
 
   .controls {
@@ -45,25 +37,6 @@
     }
   }
 
-  .emojis {
-    font-size: 18px;
-    text-align: justify;
-    max-height: 145px;
-    overflow: auto;
-    margin: 1rem 0;
-
-    i {
-      font-style: normal;
-      padding: 7px 0;
-      width: 38px;
-      cursor: pointer;
-      text-align: center;
-      display: inline-block;
-      vertical-align: middle;
-      user-select: none;
-    }
-  }
-
   .markdown {
     margin-top: 1rem;
     overflow: auto;
@@ -76,42 +49,29 @@
   }
 }
 
-.commentTitle {
-  color: #8590a6;
+.emojis {
+  font-size: 18px;
+  text-align: justify;
+  max-width: 360px;
+  max-height: 185px;
+  overflow: auto;
+  padding: 4px 0;
 
-  strong {
-    color: #1a1a1a;
-    font-size: 1.2em;
+  i {
+    font-style: normal;
+    padding: 7px 0;
+    width: 38px;
+    cursor: pointer;
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+    user-select: none;
   }
 }
 
-.commentActions {
-  cursor: pointer;
-  color: #8590a6;
-
-  &:hover {
-    color: #1a1a1a;
-  }
-
-  span {
-    margin-left: 8px;
-  }
-}
-
-.commentContent {
-  position: relative;
-
-  // &.addLine {
-  //   &::after {
-  //     content: "";
-  //     position: absolute;
-  //     left: 0;
-  //     width: 100%;
-  //     height: 30px;
-  //     pointer-events: none;
-  //     border-bottom: 1px solid rgba(217, 217, 217, 0.5);
-  //   }
-  // }
+.commentWrapper {
+  padding: 32px 16px 16px;
+  background-color: #fff;
 
   :global {
     .markdown {
@@ -119,24 +79,92 @@
     }
   }
 
-  p {
-    margin: 0;
+  .commentContainer {
+    position: relative;
+
+    .commentItem {
+      + .commentItem {
+        margin-top: 16px;
+      }
+
+      position: relative;
+      margin-left: 48px;
+
+      .avatar {
+        position: absolute;
+        left: -48px;
+        top: 8px;
+      }
+
+      header {
+        position: relative;
+        border-bottom: 1px solid #d1d5da;
+        padding: 8px 16px;
+        background-color: #f1f8ff;
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+        border: 1px solid #d1d5da;
+
+        display: flex;
+        justify-content: space-between;
+
+        &::before {
+          content: "";
+          box-sizing: content-box;
+          position: absolute;
+          left: -6px;
+          top: 13px;
+          width: 10px;
+          height: 10px;
+          background-color: #f1f8ff;
+          border-width: 1px;
+          border-color: #d1d5da;
+          border-style: solid;
+          transform: rotate(45deg);
+          border-top: 0;
+          border-right: 0;
+        }
+
+        strong {
+          font-weight: 500;
+        }
+
+        > div:last-of-type {
+          color: transparent;
+
+          span {
+            cursor: pointer;
+
+            i {
+              margin-right: 4px;
+            }
+          }
+        }
+
+        &:hover {
+          > div:last-of-type {
+            color: inherit;
+          }
+        }
+      }
+
+      main {
+        padding: 8px 16px;
+        background-color: #fff;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+        border: 1px solid #d1d5da;
+        border-top: 0;
+
+        p {
+          margin-bottom: 0;
+        }
+      }
+    }
   }
-}
 
-.avatar {
-  width: 24px;
-  height: 24px;
-  text-align: center;
-  line-height: 24px;
-  font-size: 12px;
-  border-radius: 50%;
-  color: #fff;
-  margin-top: -4px;
-  background-color: #eee;
-}
-
-.pagination {
-  padding: 1rem;
-  text-align: center;
+  .pagination {
+    padding: 1.5rem 0;
+    text-align: center;
+  }
 }
