--- a/client/src/components/Comment/index.module.scss
+++ b/client/src/components/Comment/index.module.scss
@@ -113,7 +113,7 @@
         position: relative;
         border-bottom: 1px solid #d1d5da;
         padding: 8px 16px;
-        background-color: #f1f8ff;
+        background-color: #f6f8fa;
         border-top-left-radius: 4px;
         border-top-right-radius: 4px;
         border: 1px solid #d1d5da;
