--- a/client/src/components/Comment/index.module.scss
+++ b/client/src/components/Comment/index.module.scss
@@ -1,9 +1,10 @@
 .editor {
-  padding: 16px 0;
+  padding: 16px;
   background-color: #fff;
-  border-top: 1px solid #e1e4e8;
+  // border-top: 1px solid #e1e4e8;
   position: relative;
-  margin-left: 48px;
+  margin-bottom: 16px;
+  // margin-left: 48px;
 
   .avatar {
     position: absolute;
@@ -41,7 +42,6 @@
     margin-bottom: 1rem;
     overflow: auto;
     padding: 4px 8px;
-    border: 1px solid #d9d9d9;
     border-radius: 4px;
     cursor: not-allowed;
   }
@@ -82,9 +82,6 @@
 }
 
 .commentWrapper {
-  padding: 32px 16px 16px;
-  background-color: #fff;
-
   :global {
     .markdown {
       background-color: transparent !important;
@@ -95,53 +92,35 @@
     position: relative;
 
     .commentItem {
-      + .commentItem {
-        margin-top: 16px;
-      }
-
       position: relative;
-      margin-left: 48px;
+      background-color: #fff;
+      padding: 16px;
 
-      .avatar {
-        position: absolute;
-        left: -48px;
-        top: 8px;
-        z-index: 10;
+      + .commentItem {
+        margin-top: 10px;
       }
 
       header {
         position: relative;
-        border-bottom: 1px solid #d1d5da;
-        padding: 8px 16px;
-        background-color: #f6f8fa;
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
-        border: 1px solid #d1d5da;
-
         display: flex;
-        justify-content: space-between;
+        align-items: center;
         color: #8590a6;
 
-        &::before {
-          content: "";
-          box-sizing: content-box;
-          position: absolute;
-          left: -6px;
-          top: 13px;
-          width: 10px;
-          height: 10px;
-          background-color: #f1f8ff;
-          border-width: 1px;
-          border-color: #d1d5da;
-          border-style: solid;
-          transform: rotate(45deg);
-          border-top: 0;
-          border-right: 0;
+        > span.info {
+          margin-left: 10px;
+
+          > span {
+            margin: 0 10px;
+          }
         }
 
         strong {
           color: #1a1a1a;
-          font-weight: 500;
+          font-weight: 600;
+        }
+
+        strong.replyUser {
+          color: #ff0064;
         }
 
         > div:last-of-type {
@@ -164,50 +143,55 @@
       }
 
       main {
-        padding: 8px 16px;
-        background-color: #fff;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-        border: 1px solid #d1d5da;
-        border-top: 0;
+        > div.content {
+          padding: 0.8em 0;
+        }
+
+        div.meta {
+          color: #99a2aa;
+
+          span + span {
+            margin-left: 1rem;
+          }
+
+          .reply {
+            cursor: pointer;
+
+            &:hover {
+              color: #ff0064;
+            }
+
+            i {
+              margin-right: 8px;
+            }
+          }
+        }
+
+        .subComments {
+          padding-top: 16px;
+        }
 
         p {
           margin-bottom: 0;
         }
       }
-    }
 
-    @media (max-width: 768px) {
-      .commentItem {
-        margin-left: 0;
+      .editorContainer {
+        height: 0;
+        overflow: hidden;
+        transition: all ease-in-out 0.3s;
 
-        .avatar {
-          left: 8px;
-
-          > span {
-            width: 24px !important;
-            height: 24px !important;
-            line-height: 24px !important;
-
-            > span {
-              line-height: 24px !important;
-            }
-          }
-        }
-
-        header {
-          padding-left: 40px;
-
-          &::before {
-            display: none;
-          }
+        &.isActive {
+          height: 378px;
         }
       }
     }
   }
 
   .pagination {
-    padding: 1.5rem 0;
+    margin-top: 16px;
+    padding: 16px 0;
     text-align: center;
+    background-color: #fff;
   }
 }
