--- a/client/src/components/CategoryMenu/index.module.scss
+++ b/client/src/components/CategoryMenu/index.module.scss
@@ -18,6 +18,7 @@
     font-size: 14px;
     padding: 4px 24px;
     white-space: nowrap;
+    border: 1px solid transparent;
 
     + li {
       margin-left: 1.2em;
@@ -25,7 +26,7 @@
 
     &.active {
       color: $feMainColor;
-      border: 1px solid $feMainColor;
+      border-color: $feMainColor;
       background-color: $feBgColor;
       border-radius: 4px;
     }
