--- a/client/src/components/CommentAndRecommendArticles/index.module.scss
+++ b/client/src/components/CommentAndRecommendArticles/index.module.scss
@@ -41,7 +41,7 @@
   }
 
   .articleContainer {
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    // box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   }
 
   @media (max-width: 768px) {
