--- a/client/src/components/CategoryMenu/index.module.scss
+++ b/client/src/components/CategoryMenu/index.module.scss
@@ -1,11 +1,17 @@
 @import "../../theme/var.scss";
 
-.tagList {
+.wrapper {
+  background-color: #fff;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+
+  > div {
+    padding: 0.75rem 0;
+  }
+
   ul {
     width: 100%;
     display: inline-flex;
     overflow-x: auto;
-    padding-bottom: 1rem;
 
     &::-webkit-scrollbar {
       display: none !important;
@@ -16,8 +22,9 @@
     display: inline-flex;
     align-items: center;
     font-size: 14px;
-    padding: 4px 24px;
+    padding: 2px 18px;
     white-space: nowrap;
+    border-radius: 4px;
     border: 1px solid transparent;
 
     + li {
@@ -28,7 +35,6 @@
       color: $feMainColor;
       border-color: $feMainColor;
       background-color: $feBgColor;
-      border-radius: 4px;
     }
   }
 }
