--- a/client/pages/archives/index.module.scss
+++ b/client/pages/archives/index.module.scss
@@ -25,22 +25,75 @@
   }
 }
 
-.item {
-  padding: 1.5rem;
-  border-radius: 4px;
+.list {
+  padding: 1rem 1.3rem;
 
-  + .item {
+  + .list {
     margin-top: 1.5rem;
   }
 
-  p {
-    color: #333;
-    font-size: 18px;
+  h2 {
+    font-size: 1.5rem;
   }
 
-  a {
-    &:hover {
-      color: $primaryColor;
+  .item {
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+
+    + .item {
+      margin-top: 0.75rem;
+    }
+
+    ul {
+      padding-left: 2.5rem;
+    }
+
+    li {
+      position: relative;
+      padding: 0.5rem 0rem;
+
+      &::before {
+        content: " ";
+        position: absolute;
+        left: -1rem;
+        top: 17px;
+        width: 6px;
+        height: 6px;
+        margin-left: -4px;
+        background: #333;
+        border-radius: 50%;
+      }
+
+      &:hover {
+        color: $primaryColor;
+
+        .title,
+        .meta {
+          color: $primaryColor;
+        }
+
+        &::before {
+          background-color: $primaryColor;
+        }
+      }
+    }
+
+    .title {
+      color: #292525;
+      font-weight: 600;
+      font-size: 1rem;
+      line-height: 1.4;
+      text-align: left;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .meta {
+      font-size: 0.8rem;
+      padding-right: 1em;
+      margin: 0;
+      color: #333;
     }
   }
 }
