--- a/client/src/components/CategoryMenu/index.module.scss
+++ b/client/src/components/CategoryMenu/index.module.scss
@@ -5,7 +5,8 @@
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 
   > div {
-    padding: 0.75rem 0;
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
 
   ul {
