--- a/packages/admin/pages/article/editor/index.module.scss
+++ b/packages/admin/pages/article/editor/index.module.scss
@@ -1,26 +1,30 @@
 .wrapper {
-  .formItem {
-    margin-top: 16px;
-  }
+  background-color: #f4f5f5;
+  padding-top: 66.5px;
+  min-height: 100vh;
 
-  :global {
-    .CodeMirror {
-      height: 480px !important;
+  .header {
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+    height: 66.5px;
+    background-color: #fff;
+
+    input {
+      border: 0 !important;
+      box-shadow: none !important;
     }
   }
 
-  .operation {
-    height: 56px;
-    line-height: 56px;
-    background: #fff;
-    z-index: 1000;
+  .content {
+    overflow: hidden;
 
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-
-    button + button {
-      margin-left: 16px;
+    > article {
+      margin: 24px 0;
+      padding: 24px;
+      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.06);
+      background-color: #fff;
     }
   }
 }
