--- a/packages/admin/src/components/Editor/index.module.scss
+++ b/packages/admin/src/components/Editor/index.module.scss
@@ -1,9 +1,17 @@
 .wrapper {
   :global {
-    .ck {
+    .ck-toolbar {
+      border: 0 !important;
+      background: #fff !important;
+    }
+    .ck-toolbar__separator {
+      background-color: transparent !important;
+    }
+
+    .ck-editor__editable {
       border-width: 0 !important;
       box-shadow: none !important;
-      min-height: calc(100vh - 66.5px - 48px - 48px) !important;
+      min-height: calc(100vh - 66.5px - 40px - 48px - 48px) !important;
     }
   }
 }
