--- a/packages/admin/pages/page/editor/index.module.scss
+++ b/packages/admin/pages/page/editor/index.module.scss
@@ -24,3 +24,46 @@
     }
   }
 }
+
+.wrapper {
+  background-color: #f4f5f5;
+  padding-top: 106.5px;
+  min-height: 100vh;
+
+  .header {
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+    // height: 66.5px;
+    background-color: #fff;
+
+    input {
+      border: 0 !important;
+      box-shadow: none !important;
+    }
+
+    .toolbar {
+      :global {
+        .ck-toolbar {
+          border: 0 !important;
+          background: #fff !important;
+        }
+        .ck-toolbar__separator {
+          background-color: transparent !important;
+        }
+      }
+    }
+  }
+
+  .content {
+    overflow: hidden;
+
+    > article {
+      margin: 24px 0;
+      padding: 24px;
+      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.06);
+      background-color: #fff;
+    }
+  }
+}
