feat(admin): custom CKEditor

--- a/packages/admin/src/theme/reset.scss
+++ b/packages/admin/src/theme/reset.scss
@@ -46,11 +46,11 @@ body {
 }
 
 :global {
-  * {
-    transition: background-color 0.1s linear, margin 0.25s linear,
-      opacity 0.25s linear, filter 0.25s linear, visibility 0.25s linear,
-      transform 0.25s linear, border-color 0.25s linear;
-  }
+  // * {
+  //   transition: background-color 0.1s linear, margin 0.25s linear,
+  //     opacity 0.25s linear, filter 0.25s linear, visibility 0.25s linear,
+  //     transform 0.25s linear, border-color 0.25s linear;
+  // }
 
   @media (max-width: 768px) {
     .container {
