--- a/packages/admin/pages/article/editor/index.module.scss
+++ b/packages/admin/pages/article/editor/index.module.scss
@@ -10,6 +10,7 @@
     width: 100%;
     // height: 66.5px;
     background-color: #fff;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 
     input {
       border: 0 !important;
