--- a/packages/admin/pages/page/editor/index.module.scss
+++ b/packages/admin/pages/page/editor/index.module.scss
@@ -27,7 +27,7 @@
 
 .wrapper {
   background-color: #f4f5f5;
-  padding-top: 106.5px;
+  padding-top: 66.5px;
   min-height: 100vh;
 
   .header {
@@ -35,25 +35,12 @@
     top: 0;
     z-index: 1000;
     width: 100%;
-    // height: 66.5px;
     background-color: #fff;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 
     input {
       border: 0 !important;
       box-shadow: none !important;
-    }
-
-    .toolbar {
-      :global {
-        .ck-toolbar {
-          border: 0 !important;
-          background: #fff !important;
-        }
-        .ck-toolbar__separator {
-          background-color: transparent !important;
-        }
-      }
     }
   }
 
@@ -65,6 +52,12 @@
       padding: 24px;
       box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.06);
       background-color: #fff;
+
+      :global {
+        .bf-content {
+          min-height: calc(100vh - 66.5px - 48px - 48px - 92px);
+        }
+      }
     }
   }
 }
