--- a/packages/admin/pages/article/tags/index.module.scss
+++ b/packages/admin/pages/article/tags/index.module.scss
@@ -20,13 +20,13 @@
   }
 
   li.item {
-    padding: 8px 16px;
+    padding: 2px 8px;
     color: #8e8787;
     line-height: 1.5em;
     display: inline-block;
     margin: 0 7px 7px 0;
-    border: 1px solid #8e8787;
-    border-radius: 4px;
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
     transition: all ease-in-out 0.2s;
     cursor: pointer;
 
