bugfix(client): fix client tag active color

--- a/packages/client/src/components/Tags/index.module.scss
+++ b/packages/client/src/components/Tags/index.module.scss
@@ -36,7 +36,7 @@
     }
 
     &.active {
-      color: $primaryColor;
+      color: #fff;
       border: 1px solid $primaryColor;
       background-color: $primaryColor;
     }
