bugfix(client): fix editor height error

--- a/packages/client/src/components/Comment/index.module.scss
+++ b/packages/client/src/components/Comment/index.module.scss
@@ -188,12 +188,12 @@
       }
 
       .editorContainer {
-        height: 0;
+        max-height: 0;
         overflow: hidden;
         transition: all ease-in-out 0.3s;
 
         &.isActive {
-          height: 378px;
+          max-height: initial;
         }
       }
     }
