--- a/packages/client/src/components/ArticleList/index.module.scss
+++ b/packages/client/src/components/ArticleList/index.module.scss
@@ -134,7 +134,30 @@
     }
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 414px) {
+    & + .articleListItem {
+      border-top: 0;
+      margin-top: 1.5rem;
+    }
+
+    > a {
+      flex-direction: column;
+      padding: 0;
+
+      .imgWrapper {
+        width: 100%;
+        height: 180px;
+        margin-right: 0;
+      }
+
+      .info {
+        width: 100%;
+        padding: 1rem;
+      }
+    }
+  }
+
+  @media (min-width: 769px) and (max-width: 992px) {
     & + .articleListItem {
       border-top: 0;
       margin-top: 1.5rem;
