--- a/packages/client/src/components/Header/index.module.scss
+++ b/packages/client/src/components/Header/index.module.scss
@@ -32,17 +32,17 @@ $height: 64px;
     display: flex;
     align-items: center;
   }
-  // justify-content: space-between;
 
   .logo {
     height: $height;
     line-height: $height;
     text-align: left;
     color: #333;
-    margin-right: 3rem;
+    margin-right: 2rem;
 
     img {
-      width: 32px;
+      display: inline-block;
+      height: 36px;
     }
   }
 
@@ -87,8 +87,7 @@ $height: 64px;
     align-items: center;
     justify-content: space-between;
     color: #333;
-    font-size: 18px;
-    // margin-left: 48px;
+    font-size: 16px;
 
     ul {
       width: 100%;
