--- a/packages/client/src/theme/var.scss
+++ b/packages/client/src/theme/var.scss
@@ -1,3 +1,3 @@
-$primaryColor: #ff0064;
-$feMainColor: #ff0064;
-$feBgColor: #fff0f6;
+$primaryColor: #f90;
+$feMainColor: #f90;
+$feBgColor: rgba(254, 153, 0, 0.1);
