feat(client): update color & padding

--- a/packages/client/pages/archives/index.module.scss
+++ b/packages/client/pages/archives/index.module.scss
@@ -5,8 +5,8 @@
 }
 
 .container {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 
   .main {
     background-color: #fff;
