--- a/packages/client/pages/article/index.module.scss
+++ b/packages/client/pages/article/index.module.scss
@@ -22,9 +22,16 @@
     text-align: center;
   }
 
-  .cover {
-    display: inline-block;
-    max-width: 100%;
+  .coverWrapper {
+    width: 100%;
+    max-width: 768px;
+    margin: 0 auto;
+
+    img {
+      display: inline-block;
+      width: 100%;
+      height: auto;
+    }
   }
 }
 
